Complete documentation of `@TypedMultipart.Body()`

--- a/website/pages/docs/core/TypedException.mdx
+++ b/website/pages/docs/core/TypedException.mdx
@@ -1,8 +1,8 @@
 ## Outline
 ```typescript
 export function TypedException<T extends object>(
-    status: number | "2XX" | "3XX" | "4XX" | "5XX",
-    description?: string,
+  status: number | "2XX" | "3XX" | "4XX" | "5XX",
+  description?: string,
 ): MethodDecorator;
 ```
 
@@ -14,15 +14,15 @@ Exception decorator only for swagger documents.
 
 
 ## How to use
-```typescript showLineNumbers
+```typescript filename="ExceptionController.ts" showLineNumbers {19-22}
 import { Controller } from "@nestjs/common";
 import typia, { TypeGuardError } from "typia";
 
 import {
-    TypedBody,
-    TypedException,
-    TypedParam,
-    TypedRoute,
+  TypedBody,
+  TypedException,
+  TypedParam,
+  TypedRoute,
 } from "@nestia/core";
 
 import { IBbsArticle } from "@api/lib/structures/IBbsArticle";
@@ -32,19 +32,19 @@ import { IUnprocessibleEntity } from "@api/lib/structures/IUnprocessibleEntity";
 
 @Controller("exception")
 export class ExceptionController {
-    @TypedRoute.Post(":section/typed")
-    @TypedException<TypeGuardError>(400, "invalid request")
-    @TypedException<INotFound>(404, "unable to find the matched section")
-    @TypedException<IUnprocessibleEntity>(428)
-    @TypedException<IInternalServerError>("5XX", "internal server error")
-    public async typed(
-        @TypedParam("section") section: string,
-        @TypedBody() input: IBbsArticle.IStore,
-    ): Promise<IBbsArticle> {
-        section;
-        input;
-        return typia.random<IBbsArticle>();
-    }
+  @TypedRoute.Post(":section/typed")
+  @TypedException<TypeGuardError>(400, "invalid request")
+  @TypedException<INotFound>(404, "unable to find the matched section")
+  @TypedException<IUnprocessibleEntity>(428)
+  @TypedException<IInternalServerError>("5XX", "internal server error")
+  public async typed(
+    @TypedParam("section") section: string,
+    @TypedBody() input: IBbsArticle.IStore,
+  ): Promise<IBbsArticle> {
+    section;
+    input;
+    return typia.random<IBbsArticle>();
+  }
 }
 ```
 
