--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -25,25 +25,25 @@ npx nestia template <directory>
 
 ## Setup Wizard
 <Tabs items={['npm', 'pnpm', 'yarn']}>
-    <Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 npm install --save-dev nestia
 npx nestia setup
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 pnpm install --save-dev nestia
 pnpm nestia setup --manager pnpm
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # YARN BERRY IS NOT SUPPORTED
 yarn add -D nestia
 yarn nestia setup --manager yarn
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 When you want to setup `nestia` in existing project, just run above `npx nestia setup` command.
@@ -56,7 +56,7 @@ Setup Wizard will install and configure everything automatically.
 ## Webpack
 ### With `node_modules`
 <Tabs items={['npm', 'pnpm', 'yarn']}>
-    <Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
 npm install --save-dev nestia
@@ -66,8 +66,8 @@ npx nestia setup
 npm install --save-dev ts-loader
 npm install --save-dev webpack webpack-cli webpack-node-externals 
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
 pnpm install --save-dev nestia
@@ -77,8 +77,8 @@ pnpm nestia setup --manager pnpm
 pnpm install --save-dev ts-loader
 pnpm install --save-dev webpack webpack-cli webpack-node-externals 
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA (YARN BERY IS NOT SUPPORTED)
 yarn add -D nestia
@@ -88,7 +88,7 @@ yarn nestia setup --manager yarn
 yarn add -D ts-loader
 yarn add -D webpack webpack-cli webpack-node-externals 
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 When you want to bundle your NestJS project into a single file, you have to install `webpack` manually.  
@@ -97,37 +97,37 @@ Never run `nest build --webpack` command of `@nestjs/cli`, because it is not com
 
 ```javascript filename="webpack.config.js" showLineNumbers copy
 const path = require("path");
-const nodeExternals = require('webpack-node-externals');
+const nodeExternals = require("webpack-node-externals");
 
 module.exports = {
-    // CUSTOMIZE HERE
-    entry: {
-        server: './src/executable/server.ts',
-    },
-    output: {
-        path: path.join(__dirname, 'dist'),
-        filename: '[name].js',
-    },
-    optimization: {
-        minimize: false
-    },
+  // CUSTOMIZE HERE
+  entry: {
+    server: "./src/executable/server.ts",
+  },
+  output: {
+    path: path.join(__dirname, "dist"),
+    filename: "[name].js",
+  },
+  optimization: {
+    minimize: false,
+  },
 
-    // JUST KEEP THEM
-    externals: [nodeExternals()],
-    mode: 'development',
-    target: 'node',
-    module: {
-        rules: [
-            {
-                test: /\.ts$/,
-                exclude: /node_modules/,
-                loader: 'ts-loader',
-            }
-        ]
-    },
-    resolve: {
-        extensions: ['.tsx', '.ts', '.js'],
-    },
+  // JUST KEEP THEM
+  externals: [nodeExternals()],
+  mode: "development",
+  target: "node",
+  module: {
+    rules: [
+      {
+        test: /\.ts$/,
+        exclude: /node_modules/,
+        loader: "ts-loader",
+      },
+    ],
+  },
+  resolve: {
+    extensions: [".tsx", ".ts", ".js"],
+  },
 };
 ```
 
@@ -136,25 +136,25 @@ After installing both `nestia` and `webpack`, configure `webpack.config.js` file
 From now on, you can build the single JS file just by running the `npx webpack` command. By the way, when removing `devDependencies` for `--production` install, never forget to add the `--ignore-scripts` option to prevent the `prepare` script.
 
 <Tabs items={['npm', 'pnpm', 'yarn']}>
-    <Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 npx webpack
 npm ci --omit=dev --ignore-scripts
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 pnpm webpack
 pnpm install --production --ignore-scripts
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 yarn webpack
 rm -rf node_modules
 yarn install --production --ignore-scripts --immutable
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 ### Single JS file only
@@ -163,7 +163,7 @@ If you can build your NestJS project into a singile JS file, and that JS file ev
 To accomplish the light JS bundling, install special dependencies like below.
 
 <Tabs items={['npm', 'pnpm', 'yarn']}>
-    <Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
 npm install --save-dev nestia
@@ -174,8 +174,8 @@ npm install --save-dev ts-loader
 npm install --save-dev webpack webpack-cli
 npm install --save-dev copy-webpack-plugin write-file-webpack-plugin
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
 pnpm install --save-dev nestia
@@ -186,8 +186,8 @@ pnpm install --save-dev ts-loader
 pnpm install --save-dev webpack webpack-cli
 pnpm install --save-dev copy-webpack-plugin write-file-webpack-plugin
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA (YARN BERY IS NOT SUPPORTED)
 yarn add -D nestia
@@ -198,7 +198,7 @@ yarn add -D ts-loader
 yarn add -D webpack webpack-cli
 yarn add -D copy-webpack-plugin write-file-webpack-plugin
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 Also, configure `webpack.config.js` file like below, considering options. 
@@ -293,24 +293,24 @@ module.exports = {
 
 ## NX
 <Tabs items={['npm', 'pnpm', 'yarn']}>
-    <Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 npm install --save-dev nestia
 npx nestia setup
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 pnpm install --save-dev nestia
 pnpm nestia setup --manager pnpm
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 yarn add -D nestia
 yarn nestia setup --manager yarn
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 After install `nestia` like above, you have to modify `project.json` on each app you use typia like below.
@@ -344,7 +344,7 @@ After install `nestia` like above, you have to modify `project.json` on each app
 
 ## Manual Setup
 <Tabs items={['npm', 'pnpm', 'yarn']}>
-    <Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # COMPILERS
 npm install --save-dev typescript
@@ -358,8 +358,8 @@ npm install --save @nestia/core
 npm install --save @nestia/e2e
 npm install --save typia
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # COMPILERS
 pnpm install --save-dev typescript
@@ -373,8 +373,8 @@ pnpm install --save @nestia/core
 pnpm install --save @nestia/e2e
 pnpm install --save typia
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # COMPILERS
 yarn add -D typescript
@@ -388,25 +388,25 @@ yarn add @nestia/core
 yarn add @nestia/e2e
 yarn add typia
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 If you want to install `nestia` manually, you have to install `ts-node` and `ts-patch` modules as well as `typescript`. After installing those compilers, install `nestia` libraries like above.
 
 ```json filename="tsconfig.json" showLineNumbers copy
 {
-    "strict": true,
-    "strictNullChecks": true,
-    "compilerOptions": {
-        "plugins": [
-            { "transform": "typia/lib/transform" },
-            { 
-                "transform": "@nestia/core/lib/transform",
-                "validate": "assert",
-                "stringify": "assert", 
-            },
-        ],
-    },
+  "strict": true,
+  "strictNullChecks": true,
+  "compilerOptions": {
+    "plugins": [
+      { "transform": "typia/lib/transform" },
+      { 
+        "transform": "@nestia/core/lib/transform",
+        "validate": "assert",
+        "stringify": "assert", 
+      },
+    ],
+  },
 }
 ```
 
@@ -429,28 +429,28 @@ Also, never forget to configure `strict` (or `strictNullChecks`) as `true`. It i
 
 ```json filename="package.json" showLineNumbers copy
 {
-    "scripts": {
-        "prepare": "ts-patch install && typia patch"
-    }
+  "scripts": {
+    "prepare": "ts-patch install && typia patch"
+  }
 }
 ```
 
 <Tabs items={['npm', 'pnpm', 'yarn']}>
-    <Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 npm run prepare
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 pnpm run prepare
 ```
-    </Tab>
-    <Tab>
+  </Tab>
+  <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 yarn run prepare
 ```
-    </Tab>
+  </Tab>
 </Tabs>
 
 At last, configure `npm run prepare` command like above. 
